Fix, se solucionó el problema con el z-index de featured-image

--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ h5
 .nav-container
 {
     position: fixed;
+    z-index: 2;
     top: 0;
     width: 100%;
     min-width: 320px;
@@ -433,39 +434,39 @@ h5
     display: flex;
     width: 100%;
     height: auto;
-    margin-bottom: 30px;
+    margin: -50px 0 30px 0;
     background-color: red∫;
     border-radius: 10px 8px 8px 10px;
 }
 .article-blog-cover
 {
     position: relative;
-    width: 230px;
+    z-index: 1;
+    width: 240px;
     height: auto;
     object-fit: cover;
-    animation: position-cover 15s infinite ease-in-out;
+    animation: position-cover 10s infinite ease-in-out;
 }
 @keyframes position-cover
 {
     0%{
-        top: -10px;
-        left: 0;
+        top: -3px;
+        left: 25px;
         rotate: 5deg;
     } 
     25%{
-        left: -5px;
+        left: 15px;
     } 
     50%{
-        top: 20px;
-
-        rotate: -15deg;
+        top: 60px;
+        rotate: -5deg;
     }
     75%{
-        left: 10px;
+        left: 35px;
     }
     100%{
-        top: -10px;
-        left: 0;
+        top: -3px;
+        left: 25px;
         rotate: 5deg;
     }
 }
@@ -479,7 +480,6 @@ h5
 .article-blog-info
 {
     display: flex;
-    position: relative;
     flex-direction: column;
     justify-content: end;
     padding: 14px 20px 20px 20px;
@@ -495,9 +495,9 @@ h5
 .featured-product-title
 {
     position: absolute;
-    z-index: -1;
-    bottom: 200px;
-    left: -30px;
+    z-index: -2;
+    top: 250px;
+    left: 340px;
     font-size: 70px;
     font-weight: 600;
     color: var(--grey);
@@ -879,6 +879,12 @@ h5
     font-weight: 600;
     color: var(--white);
 }
+.madewithlove-container span
+{
+    width: 10px;
+    height: 10px;
+    background-image: url(../assets/);
+}
 .madewithlove-container
 {
     display: flex;
@@ -1026,7 +1032,7 @@ h5
         display: flex;
         flex-direction: column;
         width: 100%;
-        padding-top: 152px;
+        padding-top: 30px;
     }
     .section-container p
     {
@@ -1054,9 +1060,9 @@ h5
     /* product title */
     .featured-product-title
     {
-        position: absolute;
+        position: static;
         width: 100%;
-        z-index: -1;
+        z-index: -2;
         bottom: 48vh;
         left: 0;
         font-size: 12vw;
@@ -1074,7 +1080,13 @@ h5
     }
 
 
-    .article-blog,
+    .article-blog
+    {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin: 0 0 30px 0;
+    }
     .article-project
     {
         display: flex;
@@ -1083,14 +1095,46 @@ h5
     }
     .article-blog-cover
     {
-        width: 140px;
+        position: absolute;
+        z-index: 1;
+        width: 120px;
         align-self: center;
+    }
+    @keyframes position-cover
+{
+    0%{
+        top: 120px;
+        left: 35%;
+        rotate: 5deg;
+    } 
+    25%{
+        left: 33%;
+    } 
+    50%{
+        top: 160px;
+        rotate: -15deg;
+    }
+    75%{
+        left: 36%;
+    }
+    100%{
+        top: 120px;
+        left: 35%;
+        rotate: 5deg;
+    }
+}
+    .article-blog-info
+    {
+        height: 574px;
+        justify-content: space-between;
+        text-align: center;
     }
     .article-project-cover
     {
         width: 100%;
         height: auto;
         border-radius: 0;
+        margin-bottom: -2.6px;
     }
     .interactive-data
     {
@@ -1137,6 +1181,12 @@ h5
     .slider-projects-container::-webkit-scrollbar
     {
         display: none;
+    }
+
+    /* section love */
+    .madewithlove-container p
+    {
+        font-size: 30px;
     }
     
 
